--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -219,7 +219,7 @@ footer p {
 
 // 美容師一覧ページ //
 .search {
-	height: 150px;
+	padding: 20px;
 	margin-bottom: 20px;
 	background-color: rgba(252, 224, 222, 0.5);
 }
@@ -474,13 +474,42 @@ footer p {
 }
 
 // ヘアモ一覧ページ //
-.model_search {
-	height: 150px;
+.model-search {
+	padding: 20px;
 	margin-bottom: 20px;
-	background-color: rgb(211, 204, 222);
+	background-color: rgba(211, 204, 222, 0.1);
+	border-radius: 8px;
+	box-shadow: inset 0 0 15px 8px rgba(211, 204, 222, 0.8);
+	p {
+		font-size: 18px;
+		color: rgb(211, 204, 222);
+		font-weight: bold;
+		margin-bottom: 15px;
+	}
+	.select {
+		text-align: center;
+		margin-bottom: 10px;
+		.content {
+		width: 100px;
+		text-align: left;
+		}
+		.choice {
+			width: 150px;
+			margin-right: 20px;
+		}
+	}
+	.search-btn {
+		text-align: right;
+		.btn {
+			background-color: rgb(211, 204, 222);
+			color: #FFFFFF;
+			font-weight: bold;
+			padding: 5px;
+		}
+	}
 }
 
-.model_index-box {
+.model-index-box {
 	width: 500px;
 	display: inline-block;
 	background-color: rgba(211, 204, 222, 0.3);
