--- a/app/views/models/index.html.erb
+++ b/app/views/models/index.html.erb
@@ -6,19 +6,19 @@
           <p>ヘアモ検索</p>
           <div class="select">
             <%= f.label :性別, class: "content" %>
-            <%= f.select :hairmodel_gender, Model.hairmodel_genders.keys.map {|k| [I18n.t("enums.model.hairmodel_gender.#{k}"), k]}, { include_blank: '選択なし'}, class: "choice" %>
+            <%= f.select :hairmodel_gender, options_for_select(Model.hairmodel_genders.keys.map {|k| [I18n.t("enums.model.hairmodel_gender.#{k}"), k]}, params[:hairmodel_gender]), { include_blank: '選択なし'}, class: "choice" %>
             <%= f.label :年代, class: "content" %>
-            <%= f.select :age, Model.ages.keys.map {|k| [I18n.t("enums.model.age.#{k}"), k]}, { include_blank: '選択なし'}, class: "choice" %>
+            <%= f.select :age, options_for_select(Model.ages.keys.map {|k| [I18n.t("enums.model.age.#{k}"), k]},params[:age]), { include_blank: '選択なし'}, class: "choice" %>
             <%= f.label :髪の長さ, class: "content" %>
-            <%= f.select :hair_length, Model.hair_lengths.keys.map {|k| [I18n.t("enums.model.hair_length.#{k}"), k]}, { include_blank: '選択なし'}, class: "choice" %>
+            <%= f.select :hair_length, options_for_select(Model.hair_lengths.keys.map {|k| [I18n.t("enums.model.hair_length.#{k}"), k]},params[:hair_length]), { include_blank: '選択なし'}, class: "choice" %>
           </div>
           <div class="select">
             <%= f.label :黒染め履歴, class: "content" %>
-            <%= f.select :black_history, Model.black_histories.keys.map {|k| [I18n.t("enums.model.black_history.#{k}"), k]}, { include_blank: '選択なし'}, class: "choice"%>
+            <%= f.select :black_history, options_for_select(Model.black_histories.keys.map {|k| [I18n.t("enums.model.black_history.#{k}"), k]},params[:black_history]), { include_blank: '選択なし'}, class: "choice"%>
             <%= f.label :ブリーチ履歴, class: "content" %>
-            <%= f.select :bleach_history, Model.bleach_histories.keys.map {|k| [I18n.t("enums.model.bleach_history.#{k}"), k]}, { include_blank: '選択なし'}, class: "choice" %>
+            <%= f.select :bleach_history, options_for_select(Model.bleach_histories.keys.map {|k| [I18n.t("enums.model.bleach_history.#{k}"), k]},params[:bleach_history]), { include_blank: '選択なし'}, class: "choice" %>
             <%= f.label :縮毛矯正履歴, class: "content" %>
-            <%= f.select :straight_history, Model.straight_histories.keys.map {|k| [I18n.t("enums.model.straight_history.#{k}"), k]}, { include_blank: '選択なし'}, class: "choice" %>
+            <%= f.select :straight_history, options_for_select(Model.straight_histories.keys.map {|k| [I18n.t("enums.model.straight_history.#{k}"), k]},params[:straight_history]), { include_blank: '選択なし'}, class: "choice" %>
           </div>
           <div class="search-btn">
             <%= f.submit "検索", class: "btn" %>
