--- a/app/views/models/_favorites.html.erb
+++ b/app/views/models/_favorites.html.erb
@@ -13,7 +13,11 @@
 			</div>
 			<div class="haircatalog-footer">
 				<span><%= favorite.hair_catalog.created_at.strftime('%Y/%m/%d') %></span>
-				<!-- <span>♡1</span> -->
+				<% if model_signed_in? %>
+					<span id="favorite_<%= favorite.hair_catalog.id %>">
+						<%= render partial: 'favorites/favorite', locals: {haircatalog: favorite.hair_catalog} %>
+					</span>
+				<% end %>
 			</div>
 		</div>
 	</div>
