--- a/app/views/hairdressers/index.html.erb
+++ b/app/views/hairdressers/index.html.erb
@@ -35,6 +35,7 @@
             <% end %>
           </div>
           <div class="search-btn">
+            <%= f.submit "clear", type: :reset, class: "btn" %>
             <%= f.submit "検索", class: "btn" %>
           </div>
         <% end %>
