--- a/app/views/hairdressers/edit.html.erb
+++ b/app/views/hairdressers/edit.html.erb
@@ -1,3 +1,4 @@
+<script src="https://ajaxzip3.github.io/ajaxzip3.js" charset="UTF-8"></script>
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-offset-2 col-md-8">
